Refactored code, only USD budget

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 
 				// USD
-				if (budgUSD >= 0 || budgEURO >= 0){
+				if (budgUSD >= 0){
 
 					//Beach
 					if(budgUSD < 50){
@@ -345,12 +345,7 @@
 
 
 				}
-
-
-
-
-
-
+				
 			}
 
 
